tests/ui/invalid_int_type.stderr
error: Parse error: Invalid IntType: f32. Supported types are i8, u8, i16, u16, i32, u32, i64, u64, i128, u128, isize, usize
 --> tests/ui/invalid_int_type.rs:3:1
  |
3 | / enum_ext!(
4 | |     #[enum_def(IntType = "f32")]
5 | |     pub enum BadIntType {
6 | |         A,
... |
9 | | );
  | |_^
  |
  = note: this error originates in the macro `enum_ext` (in Nightly builds, run with -Z macro-backtrace for more info)
