tests/ui/invalid_int_type.rs
use enum_ext::enum_ext;

enum_ext!(
    #[enum_def(IntType = "f32")]
    pub enum BadIntType {
        A,
        B,
    }
);

fn main() {}
